-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17, 21, 22
-
Component/s: hotspot
-
b22
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8355762 | 21.0.8 | Satyen Subramaniam | P4 | Resolved | Fixed | b01 |
| JDK-8355763 | 17.0.16 | Satyen Subramaniam | P4 | Resolved | Fixed | b01 |
If you run any of the current gtests with macos-aarch64-zero, it would fail as:
```
% CONF=macosx-aarch64-zero-fastdebug make exploded-test TEST=gtest:Atomic
Using exact match for CONF=macosx-aarch64-zero-fastdebug (other matches are possible)
Building target 'exploded-test' in configuration 'macosx-aarch64-zero-fastdebug'
Updating support/modules_libs/java.base/zero/libjvm.dylib due to 1 file(s)
Test selection 'gtest:Atomic', will run:
* gtest:Atomic/zero
Running test 'gtest:Atomic/zero'
Note: Google Test filter = Atomic*
[==========] Running 16 tests from 6 test suites.
[----------] Global test environment set-up.
[----------] 3 tests from AtomicAddTest
[ RUN ] AtomicAddTest.int32_vm
Error occurred during initialization of VM
Failed setting boot class path.
Finished running test 'gtest:Atomic/zero'
Test report is stored in build/macosx-aarch64-zero-fastdebug/test-results/gtest_Atomic_zero
```
The reason seems to be that the BSD specific code adds either `client` or `server` to the JDK path, while zero is actually in `zero`. This breaks VM code that expects libjvm.dylib to be found.
```
% CONF=macosx-aarch64-zero-fastdebug make exploded-test TEST=gtest:Atomic
Using exact match for CONF=macosx-aarch64-zero-fastdebug (other matches are possible)
Building target 'exploded-test' in configuration 'macosx-aarch64-zero-fastdebug'
Updating support/modules_libs/java.base/zero/libjvm.dylib due to 1 file(s)
Test selection 'gtest:Atomic', will run:
* gtest:Atomic/zero
Running test 'gtest:Atomic/zero'
Note: Google Test filter = Atomic*
[==========] Running 16 tests from 6 test suites.
[----------] Global test environment set-up.
[----------] 3 tests from AtomicAddTest
[ RUN ] AtomicAddTest.int32_vm
Error occurred during initialization of VM
Failed setting boot class path.
Finished running test 'gtest:Atomic/zero'
Test report is stored in build/macosx-aarch64-zero-fastdebug/test-results/gtest_Atomic_zero
```
The reason seems to be that the BSD specific code adds either `client` or `server` to the JDK path, while zero is actually in `zero`. This breaks VM code that expects libjvm.dylib to be found.
- backported by
-
JDK-8355762 MacOS Zero cannot run gtests due to wrong JVM path
-
- Resolved
-
-
JDK-8355763 MacOS Zero cannot run gtests due to wrong JVM path
-
- Resolved
-
- links to
-
Commit
openjdk/jdk/744e0893
-
Commit(master)
openjdk/jdk17u-dev/2636676b
-
Commit(master)
openjdk/jdk21u-dev/d5a2f768
-
Review
openjdk/jdk/16337
-
Review(master)
openjdk/jdk17u-dev/3533
-
Review(master)
openjdk/jdk21u-dev/1716
(3 links to)