8318700: MacOS Zero cannot run gtests due to wrong JVM path

Reviewed-by: dholmes